--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "tailwind": "^4.0.0"
   },
