--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "firebase": "^10.5.0",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
