--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "tailwind": "^4.0.0"
