--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.1.3",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "firebase": "^10.5.0",
